--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/janaktripathee/liri-node-app#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "dotenv": "^7.0.0",
+    "moment": "^2.24.0",
     "node-spotify-api": "^1.0.7",
     "request": "^2.88.0"
   }
